docs: sync translated READMEs with English version
- Add logo, Aesh badge to zh/ja/ko READMEs
- Add image rendering section in all languages
- Update backend selection docs with Aesh/FFM
- Add backend comparison table
- Update coverage table and module tree
- Fix license to MIT

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>